# quant_earning_edge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/strategies/: earnings_v1.yaml
docs/: ARCHITECTURE_PLAN.md
src/quant_earning_edge/: __init__.py  cli.py
src/quant_earning_edge/backtest/: nbbo_replay.py
src/quant_earning_edge/features/: __init__.py  registry.py
tests/: test_smoke.py
tests/property/: test_nbbo_replay_no_future_read.py  test_no_lookahead.py
